Feature: enhance ChatConversationControllerTest and ChatConversationService with nested test classes for improved organization and readability